@@ -140,7 +140,6 @@ response_invoke_processor(struct request *request2,
 
     processor_env_init(request->pool, &request2->env,
                        request2->translate.response->untrusted,
-                       transformation->u.processor.domain,
                        request->local_host, request->remote_host,
                        uri,
                        request_absolute_uri(request,
