@@ -29,17 +29,6 @@ current_frame(const struct widget *widget)
 }
 
 static const char *
-generate_widget_hostname(pool_t pool,
-                         struct widget *widget,
-                         const char *domain)
-{
-    assert(widget != NULL);
-    assert(domain != NULL);
-
-    return p_strcat(pool, widget_prefix(widget), ".", domain, NULL);
-}
-
-static const char *
 uri_replace_hostname(pool_t pool, const char *uri, const char *hostname)
 {
     const char *start, *end;
@@ -71,7 +60,6 @@ uri_replace_hostname(pool_t pool, const char *uri, const char *hostname)
 
 static const char *
 do_rewrite_widget_uri(pool_t pool,
-                      const char *partition_domain,
                       const struct parsed_uri *external_uri,
                       struct strmap *args, struct widget *widget,
                       const struct strref *value,
@@ -96,7 +84,6 @@ do_rewrite_widget_uri(pool_t pool,
     case URI_MODE_PROXY:
         raw = true;
     case URI_MODE_PARTIAL:
-    case URI_MODE_PARTITION:
         frame = widget_path(widget);
 
         if (frame == NULL)
@@ -112,11 +99,7 @@ do_rewrite_widget_uri(pool_t pool,
     if (uri == NULL)
         return NULL;
 
-    if (mode == URI_MODE_PARTITION && partition_domain != NULL)
-        uri = uri_replace_hostname(pool, uri,
-                                   generate_widget_hostname(pool, widget,
-                                                            partition_domain));
-    else if (widget->class->host != NULL)
+    if (widget->class->host != NULL)
         uri = uri_replace_hostname(pool, uri, widget->class->host);
 
     return uri;
@@ -130,7 +113,6 @@ do_rewrite_widget_uri(pool_t pool,
 
 struct rewrite_widget_uri {
     pool_t pool;
-    const char *partition_domain;
     const struct parsed_uri *external_uri;
     struct strmap *args;
     struct widget *widget;
@@ -166,7 +148,7 @@ class_lookup_callback(void *ctx)
         }
 
         uri = do_rewrite_widget_uri(rwu->pool,
-                                    rwu->partition_domain, rwu->external_uri,
+                                    rwu->external_uri,
                                     rwu->args, rwu->widget,
                                     rwu->value, rwu->mode, rwu->stateful);
         if (uri != NULL) {
@@ -197,7 +179,6 @@ class_lookup_callback(void *ctx)
 istream_t
 rewrite_widget_uri(pool_t pool, pool_t widget_pool,
                    struct tcache *translate_cache,
-                   const char *partition_domain,
                    const struct parsed_uri *external_uri,
                    struct strmap *args, struct widget *widget,
                    session_id_t session_id,
@@ -207,7 +188,7 @@ rewrite_widget_uri(pool_t pool, pool_t widget_pool,
     const char *uri;
 
     if (widget->class != NULL) {
-        uri = do_rewrite_widget_uri(pool, partition_domain, external_uri,
+        uri = do_rewrite_widget_uri(pool, external_uri,
                                     args, widget, value, mode, stateful);
         if (uri == NULL)
             return NULL;
@@ -217,7 +198,6 @@ rewrite_widget_uri(pool_t pool, pool_t widget_pool,
         struct rewrite_widget_uri *rwu = p_malloc(pool, sizeof(*rwu));
 
         rwu->pool = pool;
-        rwu->partition_domain = partition_domain;
         rwu->external_uri = external_uri;
         rwu->args = args;
         rwu->widget = widget;
