@@ -20,7 +20,6 @@ enum uri_mode {
     URI_MODE_DIRECT,
     URI_MODE_FOCUS,
     URI_MODE_PARTIAL,
-    URI_MODE_PARTITION,
     URI_MODE_PROXY,
 };
 
@@ -31,7 +30,6 @@ enum uri_mode {
 istream_t
 rewrite_widget_uri(pool_t pool, pool_t widget_pool,
                    struct tcache *translate_cache,
-                   const char *partition_domain,
                    const struct parsed_uri *external_uri,
                    struct strmap *args, struct widget *widget,
                    session_id_t session_id,
