@@ -61,7 +61,6 @@ widget_get_session(__attr_unused struct widget *widget,
 istream_t
 rewrite_widget_uri(__attr_unused pool_t pool, __attr_unused pool_t widget_pool,
                    __attr_unused struct tcache *translate_cache,
-                   __attr_unused const char *partition_domain,
                    __attr_unused const struct parsed_uri *external_uri,
                    __attr_unused struct strmap *args,
                    __attr_unused struct widget *widget,
@@ -120,7 +119,7 @@ test_proxy_abort(pool_t pool)
 
     struct processor_env env;
     processor_env_init(pool, &env,
-                       NULL, NULL,
+                       NULL,
                        "localhost:8080",
                        "localhost:8080",
                        "/beng.html",
